--- a/static/styles.css
+++ b/static/styles.css
@@ -83,9 +83,11 @@ header a {
     display: block;
 }
 
-.hero > * {
-    position: relative; /* Ensure child elements are above the background */
-    z-index: 1; /* Bring content above the background */
+.hero>* {
+    position: relative;
+    /* Ensure child elements are above the background */
+    z-index: 1;
+    /* Bring content above the background */
 }
 
 .hero-text {
@@ -104,7 +106,8 @@ header a {
 .hero-image {
     top: 10px;
     display: flex;
-    justify-content: flex-end; /* Align image to the right */
+    justify-content: flex-end;
+    /* Align image to the right */
     position: relative;
 }
 
@@ -115,26 +118,36 @@ header a {
     right: 0%;
     display: flex;
     gap: 280px;
-    transform: translateX(-50%); /* Center adjustment */
+    transform: translateX(-50%);
+    /* Center adjustment */
     color: white;
 }
 
-.try-demo{
+.try-demo {
     position: absolute;
     top: 40%;
     left: 20%;
 }
 
 .try-demo button {
-    background-color: #FFD700; /* Golden background */
-    border: none; /* No border */
-    padding: 10px 20px; /* Padding for size */
-    color: black; /* Text color */
-    font-size: 1rem; /* Font size */
-    font-weight: bold; /* Bold text */
-    cursor: pointer; /* Pointer cursor on hover */
-    border-radius: 5px; /* Rounded corners */
-    transition: background-color 0.3s, transform 0.2s; /* Smooth transitions */
+    background-color: #FFD700;
+    /* Golden background */
+    border: none;
+    /* No border */
+    padding: 10px 20px;
+    /* Padding for size */
+    color: black;
+    /* Text color */
+    font-size: 1rem;
+    /* Font size */
+    font-weight: bold;
+    /* Bold text */
+    cursor: pointer;
+    /* Pointer cursor on hover */
+    border-radius: 5px;
+    /* Rounded corners */
+    transition: background-color 0.3s, transform 0.2s;
+    /* Smooth transitions */
 }
 
 .try-demo button:hover {
@@ -142,8 +155,10 @@ header a {
 }
 
 .hero-image img {
-    max-width: 100%; /* Ensure image is responsive */
-    height: auto; /* Maintain aspect ratio */
+    max-width: 100%;
+    /* Ensure image is responsive */
+    height: auto;
+    /* Maintain aspect ratio */
 }
 
 
@@ -168,14 +183,17 @@ section {
     border-radius: 10px;
 }
 
-.feedback-form input, .feedback-form textarea, .feedback-form button {
+.feedback-form input,
+.feedback-form textarea,
+.feedback-form button {
     padding: 10px;
     border: none;
     border-radius: 5px;
     font-size: 1rem;
 }
 
-.feedback-form input, .feedback-form textarea {
+.feedback-form input,
+.feedback-form textarea {
     background-color: #555;
     color: white;
 }
@@ -199,21 +217,27 @@ section {
 }
 
 .github-link {
-    margin-left: 20px; /* Space between feedback form and link */
-    color: white; /* Text color */
+    margin-left: 20px;
+    /* Space between feedback form and link */
+    color: white;
+    /* Text color */
 }
 
 .github-link h3 {
-    margin-bottom: 10px; /* Space between heading and link */
+    margin-bottom: 10px;
+    /* Space between heading and link */
 }
 
 .github-link a {
-    color: #FFD700; /* Link color */
-    text-decoration: none; /* Remove underline from link */
+    color: #FFD700;
+    /* Link color */
+    text-decoration: none;
+    /* Remove underline from link */
 }
 
 .github-link a:hover {
-    text-decoration: underline; /* Underline on hover for emphasis */
+    text-decoration: underline;
+    /* Underline on hover for emphasis */
 }
 
 
@@ -228,6 +252,7 @@ section {
     from {
         transform: translateX(-100%);
     }
+
     to {
         transform: translateX(0);
     }
@@ -237,6 +262,7 @@ section {
     from {
         transform: translateX(100%);
     }
+
     to {
         transform: translateX(0);
     }
@@ -301,7 +327,8 @@ section {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
-#results h2, #results h3 {
+#results h2,
+#results h3 {
     margin-bottom: 15px;
 }
 
@@ -351,6 +378,7 @@ a#download-link:hover {
     transition: transform 0.8s;
     cursor: pointer;
 }
+
 .card-front {
     display: flex;
     flex-direction: column;
@@ -361,16 +389,19 @@ a#download-link:hover {
     backface-visibility: hidden;
     border: 1px solid #ccc;
     border-radius: 10px;
-    overflow: hidden; /* Ensures the image stays within the boundaries */
+    overflow: hidden;
+    /* Ensures the image stays within the boundaries */
 }
 
 .card-front img {
     width: 100%;
     height: 100%;
-    object-fit: cover; /* Ensures the image covers the div */
+    object-fit: cover;
+    /* Ensures the image covers the div */
 }
 
-.card-front, .card-back {
+.card-front,
+.card-back {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -386,9 +417,9 @@ a#download-link:hover {
     background-color: #121212;
 }
 
-.card img{
+.card img {
     width: 100%;
-    color:#fff;
+    color: #fff;
     object-fit: cover;
 }
 
@@ -402,12 +433,16 @@ a#download-link:hover {
     text-align: center;
     padding: 10px;
 }
-.image-container div, .image-container-bottom div {
-    padding: 10px; /* Optional: Adds inner spacing within the grid items */
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1); /* Optional: Adds some depth */
+
+.image-container div,
+.image-container-bottom div {
+    padding: 10px;
+    /* Optional: Adds inner spacing within the grid items */
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+    /* Optional: Adds some depth */
 }
 
-.image-container{
+.image-container {
     object-fit: cover;
     padding: 40px;
     min-height: 400px;
@@ -419,7 +454,7 @@ a#download-link:hover {
     background-color: #2D2D2D;
 }
 
-.image-container-bottom{
+.image-container-bottom {
     object-fit: cover;
     padding: 0px 40px 40px 300px;
     min-height: 400px;
