--- a/templates/live.html
+++ b/templates/live.html
@@ -1,17 +1,24 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DefectVision</title>
+    <link rel="icon" href="static/images/logo.jpg" type="image/x-icon">
     <link rel="stylesheet" href="static/styles.css">
 </head>
 <body>
     <header>
-        <div class="logo">
+        <div class="logo" style="display: flex; align-items: center;">
+            <img src="static/images/logo.jpg" alt="DefectVision Logo" style="width: 50px; height: auto; margin-right: 10px;">
             <h2>DefectVision</h2>
         </div>
-        <nav>
-            <a href="/">Home</a>https://d12e-115-249-160-237.ngrok-free.app
+        
+        <input type="checkbox" id="menu-toggle" class="menu-toggle">
+        <label for="menu-toggle" class="hamburger">&#9776;</label>
+    
+        <nav class="nav-links">
+            <a href="/">Home</a>
             <a href="/features">Features</a>
             <a href="/documentation">Documentation</a>
             <div class="dropdown">
@@ -22,9 +29,11 @@
                     <a href="/live">Live</a>
                 </div>
             </div>
+            <a href="/about">About</a>
         </nav>
+    
         <div>
-            <a href="/about" style="margin-right: 10px;">About</a>
+            <img src="{{ url_for('static', filename='images/innovent.png') }}" alt="Feedback Section Image" style="width: 100%; border-radius: 10px; margin-right: 10px;">
         </div>
     </header>
     <div class="grid-container">
@@ -51,7 +60,10 @@
         <img id="processed-video-feed" src="" alt="Processed Video Feed" style="display: none;">
         <button type="button" id="stop-live-button">Stop</button>
     </div>
-    
+    <div id="results" style="display:none;">
+        <h3>Download Report</h3>
+        <a href="/doc/defect_log.csv" target="_blank" id="download-link">Download the defect log</a>
+    </div>
     <script src="static/live.js"></script>
 </body>
 </html>
